# advent-of-code

./: .gitignore  README.md  flake.nix
aoc/2022/: .gitignore  Cargo.toml  README.md  flake.nix
aoc/2022/.cargo/: config.toml
aoc/2022/nix/lib/: default.nix
aoc/2022/nix/parts/shells/: dev.nix
aoc/2022/nix/parts/treefmt/: treefmt.nix
aoc/2022/src/template/: readme_benchmarks.rs
aoc/2023/: README.md
aoc/2023/aoc2023/lib/: day02part1.ml  day02part2.ml  day03part1.ml  day05part1.ml  day05part2.ml  day06part2.ml  day08part1.ml  day08part2.ml  day09.ml
aoc/2023/nix/lib/: default.nix  modules.nix
aoc/2023/nix/parts/shells/: default.nix
aoc/2023/nix/parts/treefmt/: treefmt.nix
aoc/2024/: Cargo.toml  README.md  flake.nix
aoc/2024/flake-parts/pkgs/: default.nix
aoc/2024/flake-parts/shells/: dev.nix
aoc/2024/src/template/: readme_benchmarks.rs  run_multi.rs
aoc/2025/: .gitignore  Cargo.toml  README.md  flake.nix
aoc/2025/data/examples/: 05.txt
aoc/2025/flake-parts/: pre-commit-hooks.nix
aoc/2025/flake-parts/shells/: default.nix  dev.nix
aoc/2025/src/template/: readme_benchmarks.rs
aoc2023/: aoc2023.opam  dune-project
aoc2023/lib/: day01.ml  day02part1.ml  day02part2.ml  day03part1.ml  day03part2.ml  day04part1.ml  day04part2.ml  day05part1.ml  day05part2.ml  day06part1.ml  day06part2.ml  day07part1.ml  day07part2.ml  day08part1.ml  day08part2.ml  day09part1.ml  day09part2.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  dune  utils.ml
day01/: problem01.ml
day02/: problem02-part1.ml  problem02-part2.ml
nix/parts/shells/: dev.nix
