[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Tomáš Sandrini <t@tsandrini.sh>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.31", optional = true }
dhat = { version = "0.3.2", optional = true }
entropy = "0.4.2"
fxhash = "0.2.1"
good_lp = { version = "1.10.0", features = ["microlp"] }
indicatif = "0.17.9"
itertools = "0.13.0"
memoize = "0.4.2"
petgraph = "0.6.5"
pico-args = "0.5.0"
pipe-trait = "0.4.0"
priority-queue = "2.1.1"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.1.0"
tinyjson = "2.5.1"

# Solution dependencies
