[package]
name = "advent_of_code"
version = "0.12.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
bitvec = "1.0.1"

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
entropy = "0.4.2"
fxhash = "0.2.1"
good_lp = { version = "1.14.2", features = ["microlp"] }
indicatif = "0.18.3"
itertools = "0.14.0"
memoize = "0.5.1"
petgraph = "0.8.3"
pico-args = "0.5.0"
pipe-trait = "0.4.0"
rayon = "1.11.0"
regex = "1.12.2"
rustc-hash = "2.1.1"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tinyjson = "2.5.1"

# Solution dependencies
